style.css
/* CSS global variables. */
:root {
    --A: rgb(24, 28, 46);
    --B: rgb(24, 28, 46);
    --C: rgb(24, 28, 46);
    --D: rgb(24, 28, 46);
}

/* Default values for each element. */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Helvetica, sans-serif;
    color: #fff;
    -webkit-tap-highlight-color: transparent;
}

html,
body {
    height: 100%;
    width: 100%;
    overflow: hidden;
}

/* Deleting all scrollbars */
::-webkit-scrollbar {
    display: none;
}

body {
    background-color: #2c2c2c;
    background-image: url(images/background.png);
    background-size: cover;
    background-position: center;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

/* ENTER APP LABEL */
#enter-app {
    position: absolute;
    z-index: 999;
    width: 100%;
    height: 100%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 30px;
}

#enter-app__logo {
    width: 90%;
    max-width: 700px;
    border-radius: 15px;
}

header,
main,
footer {
    display: none;
}

/* HEADER  */
header {
    background-color: rgba(37, 0, 122, 0.377);
    width: 100%;
    height: 80px;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
    padding-inline: 20px;
    width: 100%;
}

.navbar__logo {
    height: 90%;
}

.navbar__logo a {
    outline: transparent;
    display: flex;
    justify-content: center;
    height: 100%;
}

.navbar__logo img {
    height: 100%;
}

.navbar__list {
    display: flex;
    gap: 1rem;
}

.navbar__list-item {
    display: none;
    justify-content: center;
    align-items: center;
    gap: 0.4rem;
}

.logged-out-element {
    transform: rotate(230deg);
}

.navbar-buttons--activated {
    display: flex;
}

.navbar__toggle-btn {
    border: none;
    outline: transparent;
    background: transparent;
    color: #fff;
    font-size: 1.5rem;
    cursor: pointer;
    display: none;
    width: 30px;
    border-radius: 8px;
    justify-content: center;
    align-items: center;
}

/* DROPDOWN MENU */
.dropdown-menu {
    z-index: 1000;
    display: none;
    position: absolute;
    right: 1rem;
    top: 100px;
    width: 300px;
    max-height: 0;
    background: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(15px);
    border-radius: 10px;
    overflow: hidden;
    transition: max-height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.dropdown-menu--open {
    max-height: 247px;
}

.dropdown-menu button {
    width: calc(100% - 30px);
    margin-inline: 15px;
    margin-top: 15px;
}

.dropdown-menu button:nth-child(3),
.dropdown-menu button:nth-child(5) {
    margin-bottom: 15px;
}

/* MAIN */
main {
    height: calc(100% - 120px);
    width: 100%;
    padding: 25px;
}

.start-container {
    flex-direction: column;
    gap: 1rem;
}

.start-container,
.login-container,
.register-container,
.activate-account-container,
.game-container,
.end-game-container,
.best-scores-container,
.user-container,
.add-question-container {
    display: none;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.container--activated {
    display: flex;
}

/* FOOTER */
footer {
    background-color: transparent;
    width: 100%;
    height: 40px;
}

.foot {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: flex-end;
}

/* LOGIN */
#login-form {
    font-size: 20px;
    backdrop-filter: blur(8px);
    background: linear-gradient(
        to left,
        rgba(255, 255, 255, 0.05),
        rgba(255, 255, 255, 0.35)
    );
    border-radius: 15px;
    box-shadow: 0px 8px 24px 0 rgba(0, 0, 0, 0.3);
    max-height: 100%;
    max-width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    padding: 36px 24px;
    position: relative;
    text-align: center;
}

.back {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
    width: 25px;
    position: absolute;
    right: 15px;
    top: 15px;
    cursor: pointer;
    background: none;
    color: inherit;
    border: none;
    padding: 2px;
    font: inherit;
    outline: transparent;
}

.popup {
    text-align: center;
    display: none;
    align-items: center;
    justify-content: center;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    top: 48%;
    width: 90%;
    height: 145px;
    z-index: 1001;
    border-radius: 15px;
    position: absolute;
    background-color: rgb(24, 28, 46);
    font-size: 20px;
}

.popup p {
    width: 90%;
}

.popup--modifier {
    max-width: 600px;
}

.popup--activated {
    display: flex;
}

.form__input--container {
    position: relative;
    margin-bottom: 32px;
}

input,
.button-style1 {
    background: linear-gradient(
        to left,
        rgba(255, 255, 255, 0.1),
        rgba(255, 255, 255, 0.25)
    );
    border: none;
    border-radius: 18px;
    box-shadow: 0px 8px 24px 0 rgba(0, 0, 0, 0.3);
    color: rgb(255, 255, 255);
    padding: 12px 24px;
    font-size: 20px;
    outline: transparent;
    overflow: hidden;
    position: relative;
    transition: box-shadow 0.3s ease-out;
    will-change: box-shadow;
}

.button-style1 {
    cursor: pointer;
}

input {
    width: 100%;
}

label {
    cursor: text;
    left: 24px;
    font-style: italic;
    opacity: 0.4;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    transition: left 0.2s ease-in, opacity 0.2s ease-in;
}

input:focus + label,
input:not(:placeholder-shown) + label {
    opacity: 0;
    left: 100%;
}

input:hover,
.button-style1:hover {
    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.3);
}

.navbar__toggle-btn:focus,
.back:focus,
.navbar__logo a:focus,
input:focus,
.button-style1:focus {
    outline: 2px solid rgba(255, 255, 255, 0.8);
}
/* ... */

